--- a/index.html
+++ b/index.html
@@ -85,16 +85,16 @@
           </div>
 
           <div class="carousel-inner">
-            <div class="carousel-item active">
+            <div class="carousel-item active" style="background-image: url(Images/Legendborn2.webp);">
               <img src="Images/Legendborn2.webp" alt="Tracey Brown's Legend Born" class="d-block w-100 " >
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" style="background-image: url(Images/Spirit\ Legacy\ Books.jpg);">
               <img src="Images/Spirit Legacy Books.jpg" alt="E.E. Holmes Gateway Trilogy" class="d-block w-100">
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" style="background-image: url(Images/WhisperWalker\'s\ Series.jpg);">
               <img src="Images/WhisperWalker's Series.jpg" alt="E.E. Holmes Gateway Trackers Series" class="d-block w-100">
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" style="background-image: url(Images/fb_evan-winter_rage-of-dragons_01.jpg);">
               <img src="Images/fb_evan-winter_rage-of-dragons_01.jpg" alt="Evan Winter's Rage of Dragons Series" class="d-block w-100">
             </div>
             <div class="carousel-item">
