--- a/Page2.html
+++ b/Page2.html
@@ -43,7 +43,7 @@
     <div class="row" ">
       <main class="col-md-6 text-bg-primary">
         <h2></h2>
-        <form onsubmit="return displayFormValues()">
+        <form onclick="displayFormValues">
           <div>
           <label for="text" class="form-label"> First & Last Name </label>
           <input type="text" class="form-control" id="fLname" placeholder="Jane Doe" name="name">
@@ -56,15 +56,15 @@
 
           <div class="form-check">
           <label for="gselection" class="form-check-label"> Please Select your Favorite Book Genre(s)</label><br>
-          <select multiple class="form-select" id="gselection name:fav_Genre">
-            <option>Science Fiction</option>
-            <option>Mystery</option>
-            <option>historical Fiction</option>
-            <option>Young adult</option>
-            <option>Realistic Fiction</option>
-            <option>Romance</option>
-            <option>Horror</option>
-            <option>Fantasy</option>
+          <select multiple class="form-select" id="gselection" name="fav_Genre" size="3">
+            <option value="Science Fiction">Science Fiction</option>
+            <option value="Mystery">Mystery</option>
+            <option value="Historical Fiction">Historical Fiction</option>
+            <option value="Young adult">Young adult</option>
+            <option value="Realistic Fiction">Realistic Fiction</option>
+            <option value="Romance">Romance</option>
+            <option value="Horror">Horror</option>
+            <option value="Fantasy">Fantasy</option>
             
           </select>
 
@@ -84,13 +84,19 @@
 	          <textarea class="form-control" rows="5" id="comment" name="text"></textarea><br>
             
           <div>
-            <button type="submit" class="btn btn-info" id="myBtn">Submit</button>
+            <button type="button" class="btn btn-info" id="myBtn" onclick="displayFormValues">Submit</button>
           </div><br>
+
+            <button type="reset" class="btn btn-info" id="myRst">Reset</button>
       </main>
 
 <!------------------------Main2------------------------------->
       <main class="col-md-6 text-bg-info">
-        <p id="content"></p>
+        <h1>User's Information</h1>
+        <p>Name:</p><p id="name1"></p>
+        <p>Email:</p><p id="email1">
+        <p>Favorite Book Genre's:</p><p id="genrV"></p>
+        <p>Favorite Books:</p><p id="comm"></p>
       </main>
     </div>
 
