--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <h2 class="small text-warning">No Birds Allowed</h2>
         <div>
       </header>
-      
+     </div>
    <!----------------------Nav------------------------->
-    </div>
+   
     <div class="row">
       <nav class="col-lg-12 navbar navbar-expand-md navbar-dark bg-secondary">
         <a href="" class="navbar-brand h1"> <img class="float-start " src="Images/johnny-coffee-2.png" widht="20" height="20 m-2"> Menu </a>
@@ -33,7 +33,7 @@
           <ul class="nav">
             <li class="nav-item active"><a href="index.html" class="nav-link active text-light">Home</a></li>
             <li class="nav-item"><a href="Page2.html" class="nav-link text-light">Page 2</a></li>
-            <li class="nav-item"><a href="https://www.wrathandgrace.com/" class="nav-link text-light">Link</a></li>
+            <li class="nav-item"><a href="https://www.thriftbooks.com/" class="nav-link text-light">Link</a></li>
           </ul>
         </div>
       </nav>  
@@ -41,7 +41,7 @@
 <!-------------------------Main1------------------------>
     <div class="row">
       <main class="col-md-6 text-bg-warning">
-        <h4>My Personal Favorite Books</h4>
+        <h4 class="display-6 text-center">My Favorite Books</h4>
         <table class="table table-striped table-hover table-light">
           <thead class="">
           <tr>
@@ -52,20 +52,29 @@
           </thead>
           <tbody class="">
           <tr>
-            <th></th>
-            <th></th>
-            <th></th>
+            <td>Legend Born</td>
+            <td>Tracy Deonn</td>
+            <td>YA Fantasy</td>
           </tr>
           <tr>
-            <th></th>
-            <th></th>
-            <th></th>
+            <td>Gateway Trilogy</td>
+            <td>e.E. Holmes</td>
+            <td>Paranormal Fantasy</td>
           </tr>
           <tr>
-            <th></th>
-            <th></th>
-            <th></th>
+            <td>Gateway Trackers Series</td>
+            <td>E.E. Holmes</td>
+            <td>Paranormal Fantasy</td>
           </tr>
+            <td>The Rage of Dragons</td>
+            <td>Evan Winter</td>
+            <td>Fantasy</td>
+          <tr>
+            <td>The Darkest Minds</td>
+            <td>Alexandra Bracken</td>
+            <td>YA Fantasy</td>
+          </tr>
+            <tbody
           </tbody>
           
         </table>
@@ -86,7 +95,7 @@
 
           <div class="carousel-inner">
             <div class="carousel-item active" style="background-image: url(Images/Legendborn2.webp);">
-              <img src="Images/Legendborn2.webp" alt="Tracey Brown's Legend Born" class="d-block w-100 " >
+              <img src="Images/Legendborn2.webp" alt="Tracy Deonn's Legend Born" class="d-block w-100 " >
             </div>
             <div class="carousel-item" style="background-image: url(Images/Spirit\ Legacy\ Books.jpg);">
               <img src="Images/Spirit Legacy Books.jpg" alt="E.E. Holmes Gateway Trilogy" class="d-block w-100">
@@ -114,7 +123,7 @@
     </div>
     <div class="row text-bg-dark">
       <footer class="col-lg-12 text-center">
-        <p> Assignment 3 - CPSC 2125 by Jennifer L. Jackson</p>
+        <p> Assignment 5 - CPSC 2125 by Jennifer L. Jackson</p>
         <p id="modified"></p>
         <p> &copy October 27, 2022</p>
       </footer>
